<resources>
    <string name="tv_list">TV list</string>
    <string name="radio_list">Radio list</string>
    <string name="search_prog">Search prog</string>
    <string name="edit_prg">Edit prog</string>
    <string name="egp_guid">Epg guide</string>
    <string name="sys_set">System set</string>
    <string name="menul_search">Manul search</string>
    <string name="auto_serach">Auto search</string>
    <string name="all_serach">Full frequency search</string>
    <string name="signal_zhiliang">Signal quality</string>
    <string name="search_jingdu">Search progress</string>
    <string name="signal_qingdu">Signal strength</string>
    <string name="main_freq_setting">Main frequency set</string>
    <string name="check_signal">Signal check</string>
    <string name="parent_lock">Parent lock</string>
    <string name="CA_information">CA info</string>
    <string name="teltext_setting">Teltext set</string>
    <string name="audio_setting">Audio set</string>
	<string name="mao_hao">:</string>
    <string name="frequency">Frequency</string>
    <string name="menual_search">Manul search</string>
    <string name="symbol">Symbol</string>
    <string name="modulation">Modulation</string>
    <string name="frq_unit">Mhz</string>
    <string name="sym_unit">Kpbs</string>
    <string name="ok">Confirm</string>
    <string name="mod_unit">QAM</string>
    <string name="main_freq">Main frequency</string>
    <string name="freq_units">Mhz</string>
    <string name="confirm_ok">Confirm</string>
    <string name="smc_info">SMC info</string>
    <string name="smc_numb">SMC number：</string>
    <string name="soft_version">Software ver：</string>
    <string name="e_value">Eigenvalue：</string>
    <string name="search_prg">Search prog</string>
    <string name="tf_sun_card">Son mothercard</string>
    <string name="tf_entitle_info">Entitle info</string>
    <string name="tf_wallet_info">IPPV walletinfo </string>
    <string name="tf_ippv_ino">IPPV info</string>
    <string name="tf_change_pin">Modify PIN</string>
    <string name="tf_watch_level">Modify watch level</string>
    <string name="tf_pair_info">Card corresponding query</string>
    <string name="tf_working_time">Modify working time</string>
    <string name="tf_working_time_change_ok">Modify working time successful</string>
    <string name="tf_working_time_invalid">Modify working time failure</string>
    <string name="tf_working_time_err">Start time must be after end time</string>
    <string name="tf_normal_entitle_info">Normal entitle info</string>
    <string name="tf_negative_authorization_info">Negative authorized info</string>
    <string name="tf_eigenvalue">Eigenvalue</string>
    <string name="tf_operator_info">Operator info</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wendnesday</string>
    <string name="thurs">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="epgguid">Epg guide</string>
    <string name="sign_check">Signal check</string>
    <string name="sure_check">Detection</string>
    <string name="error_rate">Error rate</string>
    <string name="tf_watchlevel">Modify watch level</string>
    <string name="tf_input_pin">Modify PIN</string>
    <string name="tf_condition_access">Condition access</string>
    <string name="tf_smc_updat_status">SMC update status</string>
    <string name="tf_smc_status_info">SMC status info</string>
    <string name="dialog_enter">Confirm</string>
    <string name="note">Tip</string>
    <string name="data_illegal">Data illegal,please input again！</string>
    <string name="save_success">Save success，press confirm return</string>
    <string name="tf_pair_status">Card corresponding state</string>
    <string name="tf_cas_version">CAS version</string>
    <string name="tf_watch_level_str">Watch level</string>
    <string name="tf_working_level">Watch level</string>
    <string name="tf_working_time_str">Working time</string>
    <string name="tf_smc_num">SMC number</string>
    <string name="tf_area_code">Area code</string>
    <string name="tf_stb_num">STB ID</string>
    <string name="tf_current_pin">Current PIN</string>
    <string name="tf_new_pin">New PIN</string>
    <string name="tf_pin_verify">New PIN confirm</string>
    <string name="tf_start_time">Start time</string>
    <string name="tf_end_time">End time</string>
    <string name="general_authorized">General authorized</string>
    <string name="prog_id">Prog ID</string>
    <string name="video_record">Video record</string>
    <string name="expired_time">Expired time</string>
    <string name="tf_pair_info_check">Card corresponding query</string>
    <string name="tf_index">Index</string>
    <string name="tf_stb_index">STB ID</string>
    <string name="tf_pair_other">SMC already binding with other STB</string>
    <string name="tf_smc_update_time">Update time</string>
    <string name="tf_status">Status</string>
    <string name="tf_verify_value">Confirmation code</string>
    <string name="chan_edit">Edit prog</string>
    <string name="program">Program</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="fav">Fav</string>
    <string name="lock">Lock</string>
    <string name="prog_list">Prog list</string>
    <string name="present_prog">Curret prog</string>
    <string name="follow_prog">Next prog</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="recored">Record</string>
    <string name="dead_time">Expiration time</string>
    <string name="mail_reading">Mail reading</string>
    <string name="title">Title：</string>
    <string name="send_time">Send time：</string>
	<string name="sender_name">Sender Name:</string>
    <string name="mail_level">Mail level：</string>
    <string name="mail">Mail</string>
    <string name="sn">Serial number</string>
    <string name="main_title">Theme</string>
    <string name="level">Level</string>
    <string name="is_read">Is reading</string>
    <string name="tf_parent_child_info">Parent child smc info</string>
    <string name="zimuka_status">Son mother smc staus</string>
    <string name="tf_parent_card">Parent card</string>
    <string name="tf_feed_period">Feed period（hours）</string>
    <string name="tf_last_feed_time">Last feed time</string>
    <string name="tf_feed">Feed</string>
    <string name="tf_parent_card_num">Parent card number</string>
    <string name="wallet_info">Wallet infor</string>
    <string name="wallet_sn">Wallet SN</string>
    <string name="cash">Credit limit</string>
    <string name="waste">Already use points</string>
    <string name="mainmenu_str">Home page</string>
    <string name="stereo">Stereo</string>
    <string name="cur_prog"> Current prog： </string>
    <string name="next_prog"> Next prog： </string>
    <string name="progam_list">Prog list</string>
    <string name="altert_dialog_title">Warm tips</string>
    <string name="altert_text_no_signal">NO signal</string>
    <string name="open_paid_service">Open the paid service</string>
    <string name="read_and_delete">【OK】read  【RED】delete【green】all delete</string>
    <string name="identifier_info">Eigenvalue info</string>
    <string name="back_and_exit">【Recall】return  【Exit】exit</string>
    <string name="enter_back_exit">【OK】enter 【Recall】return 【Exit】exit</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
    <string name="search_status">Current search frequescy:</string>
    <string name="audio_mount">Track settings</string>
    <string name="android_app">Andorid app</string>
    <string name="old_code">Old password</string>
    <string name="new_code">New password</string>
    <string name="confirm_code">Verify password</string>
    <string name="srting_null" />
    <string name="app_name">DVBPlayer</string>
	<string name="app_name_private">TF CA Settings</string>
    <string name="ca_areacode">AreaCode:</string>
	<string name="ca_bouquet">BouquetID:</string>
	<string name="ca_user_eigenvalue">User EigenValue:</string>
    <string name="exit_and_back">【Exit】return</string>
    <string name="tf_smc_pair_present_stb">SMC paired with present STB!</string>
    <string name="tf_smc_pair_none_stb">SMC have paired with none STB! </string>
    <string name="tf_smc_pair_other_stb">SMC have paired with other STB!</string>
    <string name="tf_no_smc_available">No SMC available!</string>
    <string name="tv_program">TV</string>
    <string name="radio_program">Radio</string>
    <string name="all_program">All program</string>
    <string name="tf_enter_new_pin">Please Enter New Pin Of 6 Digits!</string>
    <string name="tf_affirm_new_pin">Please Affirm New Pin Of 6 Digits!</string>
    <string name="tf_enter_old_pin">Please Enter Old Pin Of 6 Digits!</string>
    <string name="tf_change_watch_level_notice">Change Watch Level Notice:</string>
 	<string name="tf_change_watch_level_right">Change Watch Level Right!</string>
    <string name="tf_change_watch_level_error">Change Watch Level Error!</string>
    <string-array name="audio_array">
         <item>"Stereo"</item>
         <item>"left channel"</item>
         <item>"right channel"</item>
    </string-array>
     <string-array name="qam_array">
         <item>"16 QAM"</item>
         <item>"32 QAM"</item>
         <item>"64 QAM"</item>
         <item>"128 QAM"</item>
         <item>"256 QAM"</item>
    </string-array>
     <string name="search_radio_count">RADIO:</string>
     <string name="search_tv_count">Search finish,TV:</string>
     <string name="tv_list_program">TV</string>
     <string name="radio_list_program">RADIO</string>
     <string name="all_list_program">ALL PROGRAM</string>
     <string name="tf_operator_id">Operator ID</string>
     <string name="tf_operator_name">Operator Name</string>
     <string name="tf_ippv_overview">overview</string>
     <string name="tf_book">book</string>
     <string name="tf_not_read">No Readed</string>
     <string name="tf_child_card">Child Card</string>
     <string name="tf_feedtime_not_arrive">Feedtime not arrive</string>
	 <string name="tf_insert_parent_card">Please insert parent card</string>
	 <string name="tf_insert_child_card">Please insert child card</string>
	 <string name="tf_feedcard_ok">Success to pair!</string>
	 <string name="tf_feedcard_fail">Fail to feed card!</string>
	 <string name="tf_read_parentcard_fail">Fail to read data from parent card</string>
	 <string name="setting_clear_prog">clear program finish!</string>
	 <string name="factory_reset">Clear program</string>
	 <string name="tf_insert_card">Scrambling program!Please insert your card!</string>
	 <string name="tf_badcard_type">Bad Card!</string>
	 <string name="tf_expicard_type">Expire Card!</string>
	 <string name="tf_nooper_type">Conditional Operate!</string>
	 <string name="tf_blackout_type">Blackout!</string>
	 <string name="tf_outworktime_type">Out Of Worktime!</string>
	 <string name="tf_watchlevel_type">Higher Than Watch Level!</string>
	 <string name="tf_pairing_type">Please insure STB and SMC paired!</string>
	 <string name="tf_noentitle_type">Not entitled!</string>
	 <string name="tf_decryptfail_type">Deciphering Failed!</string>
	 <string name="tf_nomoney_type">Not Enough Money Is Avilable!</string>
	 <string name="tf_erregion_type">Region error!</string>
	 <string name="tf_needfeed_type">Card Need Feed!</string>
	 <string name="tf_card_error">Card Checked Failed!</string>
	 <string name="tf_update_type">System is Updating!</string>
	 <string name="tf_lowcardver">Low Card Version!</string>
	 <string name="tf_viewlock_type">View Lock!</string>
    <string name="tf_mail_count">email count：</string>
    <string name="tf_mail_read">email read：</string>
    <string name="tf_mail_disp_num">Maximum email：</string>
</resources>