<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dvb_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/menu_bg1"
        android:orientation="vertical" >
	<TextView
		android:gravity="center"
		android:textSize="30sp"
		android:layout_height="54dp"
		android:layout_width="match_parent" android:text="@string/tf_ippv_ino">
	</TextView>
	<LinearLayout
		android:layout_marginRight="30dip"
		android:layout_marginLeft="30dip"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="10dip">
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:textSize="24sp" android:text="@string/wallet_id"/>
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:textSize="24sp" android:text="@string/prog_id"/>
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:textSize="24sp" android:text="@string/status"/>
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:textSize="24sp" android:text="@string/price"/>
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:textSize="24sp" android:text="@string/recored"/>
		<TextView
			android:gravity="center"
			android:layout_height="30dp"
			android:layout_width="145.5dp"
			android:text="@string/expired_time"
			android:textSize="24sp" />
	</LinearLayout>
	<ListView
		android:dividerHeight="2dip"
		android:fadeScrollbars="false"
		android:id="@+id/MybuyProgramView"
		android:layout_gravity="center"
		android:layout_marginRight="30dip"
		android:layout_marginLeft="30dip"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="15dp"
		android:layout_width="873dp"
		android:layout_height="322dp"
		android:fadingEdge="none"
		android:cacheColorHint="#00000000"
		android:scrollbarStyle="outsideInset"
		android:listSelector="@drawable/searchmenu_btn" />
</LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" >


    </LinearLayout>
</LinearLayout>