<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dvb_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="@dimen/tf_email_wtidth"
        android:layout_height="@dimen/tf_email_height"
        android:layout_gravity="center"
        android:background="@drawable/menu_bg1"
        android:orientation="vertical" >

	<TextView
		android:gravity="center"
            android:textSize="@dimen/tf_change_pin_title_text_size"
            android:layout_height="@dimen/tf_smc_info_title_height"
		android:layout_width="match_parent" android:text="@string/mail">
	</TextView>
	<LinearLayout
            android:layout_marginRight="@dimen/tf_email_sub_title_margin"
            android:layout_marginLeft="@dimen/tf_email_sub_title_margin"
		android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip">

		<TextView
                android:layout_width="@dimen/tf_email_sub_title_width_1"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="@dimen/tf_email_sub_title_margin_left"
		    android:gravity="center"
		    android:text="@string/sn"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

		<TextView
                android:layout_width="@dimen/tf_email_sub_title_width_2"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="@dimen/tf_email_sub_title_margin_left"
		    android:gravity="center"
		    android:text="@string/main_title"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

		<TextView
                android:layout_width="@dimen/tf_email_sub_title_width_3"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="@dimen/tf_email_sub_title_margin_left"
		    android:gravity="center"
		    android:text="@string/tf_status"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

		<TextView
                android:layout_width="@dimen/tf_email_sub_title_width_4"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="@dimen/tf_email_sub_title_margin_left_2"
		    android:gravity="center"
		    android:text="@string/level"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

	</LinearLayout>
	<ListView
		android:fadeScrollbars="false"
		android:id="@+id/MyemailView"
		android:layout_gravity="center"
            android:layout_marginRight="@dimen/tf_email_sub_title_margin"
            android:layout_marginLeft="@dimen/tf_email_sub_title_margin"
            android:layout_width="@dimen/tf_email_content_width"
            android:layout_height="@dimen/tf_email_content_height"
		android:fadingEdge="none"
		android:cacheColorHint="#00000000"
		android:listSelector="@drawable/searchmenu_btn" />

	<LinearLayout
            android:layout_width="@dimen/tf_email_content_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tf_email_sub_title_margin"
            android:layout_marginRight="@dimen/tf_email_sub_title_margin"
            android:layout_marginTop="10dip" >

		<TextView
                android:layout_width="@dimen/tf_email_tip_text_width_1"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="@dimen/tf_email_sub_title_margin_left"
		    android:gravity="left"
		    android:text="@string/tf_mail_read"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

		<TextView
		    android:id="@+id/mailread"
                android:layout_width="@dimen/tf_email_tip_text_width_2"
                android:layout_height="@dimen/tf_email_sub_title_height"
		    android:layout_marginLeft="2dp"
		    android:gravity="left"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

            <TextView
                android:layout_width="@dimen/tf_email_tip_text_width_3"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/tf_mail_disp_num"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

            <TextView
                android:id="@+id/maxmail_num"
                android:layout_width="@dimen/tf_email_tip_text_width_4"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="2dp"
                android:gravity="left"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

            <TextView
                android:layout_width="@dimen/tf_email_tip_text_width_5"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/tf_mail_count"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />

            <TextView
                android:id="@+id/mail_count"
                android:layout_width="@dimen/tf_email_tip_text_width_6"
                android:layout_height="@dimen/tf_email_sub_title_height"
                android:layout_marginLeft="2dp"
                android:gravity="left"
                android:textSize="@dimen/tf_smc_info_item_title_text_size" />
        </LinearLayout>
	
	
    
		<LinearLayout
	android:layout_marginTop="6dp"
        android:layout_marginRight="@dimen/tf_email_sub_title_margin"
        android:layout_marginLeft="@dimen/tf_email_sub_title_margin"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView
			android:gravity="center"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/read_and_delete"
			android:textSize="@dimen/tf_smc_info_item_title_text_size" />
	</LinearLayout>
</LinearLayout>	
		
</LinearLayout>